--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">AE2 - ABPRO1</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="titulo">Título del evento</string>
+    <string name="lugar">Lugar del evento</string>
+    <string name="fecha_y_hora">Fecha y hora de recordatorio (ej: 2025-10-03 15:00)</string>
+    <string name="descripcion">Descripción del evento</string>
+    <string name="boton_crear_evento">Crear evento en calendario</string>
 </resources>
