--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,22 @@
 <resources>
     <string name="app_name">AE2 - ABPRO1</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="titulo">Título del evento</string>
     <string name="lugar">Lugar del evento</string>
-    <string name="fecha_y_hora">Fecha y hora de recordatorio (ej: 2025-10-03 15:00)</string>
+    <string name="fecha">Fecha del recordatorio</string>
+    <string name="hora">Hora del recordatorio</string>
     <string name="descripcion">Descripción del evento</string>
     <string name="boton_crear_evento">Crear evento en calendario</string>
+
+    <!-- New strings for navigation and recordatorios -->
+    <string name="nav_ingresar">Ingresar recordatorio</string>
+    <string name="nav_recordatorios">Recordatorios</string>
+    <string name="btn_actualizar">Actualizar</string>
+    <string name="msg_no_recordatorios">No hay recordatorios guardados</string>
+    <string name="msg_perm_denegado_cal">Permiso de calendario denegado. Se abrirá la app de Calendario para crear el evento.</string>
+    <string name="msg_no_calendario">No se encontró calendario para insertar. Abriendo la app de calendario.</string>
+    <string name="msg_guardado">Recordatorio guardado en Calendario</string>
+    <string name="msg_no_guardado">No se pudo guardar evento en Calendario.</string>
+    <string name="msg_perm_denegado_escritura">Permiso denegado para escribir en calendario.</string>
+    <string name="msg_perm_lectura_denegada">Permiso de lectura de calendario denegado.</string>
+    <string name="btn_test_notif">Probar notificación ahora</string>
 </resources>
